[package]
name = "format_money"
version = "0.1.0"
authors = ["FenixAlive <luisangelmf@gmail.com>"]
edition = "2018"
description = "A simple function that takes a string reference &str and returns a String with money format $ #'###,###.##"
license = "MIT"
repository = "https://github.com/FenixAlive/format_money"
keywords = ["money", "format"]

[dependencies]
